--- a/src/app/shared/modals/tabla-update-pedidos/tabla-update-pedidos.component.html
+++ b/src/app/shared/modals/tabla-update-pedidos/tabla-update-pedidos.component.html
@@ -22,6 +22,7 @@
     <tr>
       <th class="px-4 py-3 text-left">Código</th>
       <th class="px-4 py-3 text-left">Fecha</th>
+      <th class="px-4 py-3 text-left">Detalles</th>
       <th class="px-4 py-3 text-left">Estado actual</th>
       <th class="px-4 py-3 text-left">Actualizar estado</th>
       <th class="px-4 py-3 text-center">Acción</th>
@@ -33,7 +34,19 @@
       class="border-t hover:bg-gray-50 transition"
     >
       <td class="px-4 py-2">{{ pedido.codigo }}</td>
-      <td class="px-4 py-2">{{ pedido.fecha }}</td>
+      <td class="px-4 py-2">
+        {{ pedido.fecha | date : "EEEE, MM/dd, HH:mm:ss" }}
+      </td>
+      <td class="px-4 py-2 flex">
+        <button
+          (click)="abrirDetalle(pedido)"
+          class="text-blue-500 hover:text-blue-700"
+          title="Ver detalles"
+        >
+          <span class="material-symbols-rounded">visibility</span>
+          Ver Detalles
+        </button>
+      </td>
       <td class="px-4 py-2">
         <span
           [ngClass]="{
@@ -41,7 +54,7 @@
             'text-green-600 font-medium': pedido.estado === 'finalizado'
           }"
         >
-          {{ pedido.estado }}
+          {{ pedido.estado === "pendiente" ? "Pendiente" : "Finalizado" }}
         </span>
       </td>
       <td class="px-4 py-2">
