--- a/src/app/sidebar/features/sidebar-admin/sidebar-admin.component.html
+++ b/src/app/sidebar/features/sidebar-admin/sidebar-admin.component.html
@@ -98,6 +98,16 @@
                 <span class="nav-label">Visualizar Comprobantes</span>
               </a>
             </li>
+            <li id="nav-item" class="mt-2 mb-1">
+              <a
+                routerLink="/admin/record"
+                class="nav-link w-[200px] h-[40px] flex gap-[12px] items-center text-indigo-500 rounded-[8px] hover:bg-gray-200 focus:outline-2 focus:outline-offset-2 transition"
+                onclick="this.blur()"
+              >
+                <span class="material-symbols-rounded pl-2">group</span>
+                <span class="nav-label">Visualizar Usuarios</span>
+              </a>
+            </li>
           </ul>
         </div>
       </li>
