--- a/src/app/views/features/view-admin/view-admin.component.html
+++ b/src/app/views/features/view-admin/view-admin.component.html
@@ -62,6 +62,25 @@
             Ver
           </button>
         </div>
+        
+      </div>
+      <div class="relative bg-[#4F959D] rounded-xl border p-6 h-fit mt-8">
+        <span class="absolute top-0 left-0 mt-4 ml-4 text-lg font-semibold">
+          Gestión de Usuarios
+        </span>
+
+        <div class="mt-10 bg-[#98D2C0] rounded-xl p-6 flex items-center justify-between shadow-sm w-full">
+          <div class="flex items-center gap-4 mr-5">
+            <span class="material-symbols-rounded text-2xl text-gray-600">group</span>
+            <span class="text-base font-medium text-gray-800">Visualizar Usuarios</span>
+          </div>
+          <button
+            class="flex items-center gap-2 bg-indigo-500 text-white text-sm font-medium px-4 py-2 rounded-lg shadow hover:bg-indigo-600 transition duration-400 ease-in-out"
+            routerLink="/admin/record">
+            <span class="material-symbols-rounded text-base">visibility</span>
+            Ver
+          </button>
+        </div>
       </div>
     </div>
 
