--- a/src/app/shared/modals/filtros-usuarios/filtros-usuarios.component.html
+++ b/src/app/shared/modals/filtros-usuarios/filtros-usuarios.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col md:flex-row flex-wrap gap-4 items-center justify-between mb-6 p-4 rounded-xl shadow-sm bg-[#4F959D] border border-[#98D2C0]">
+<div class="flex flex-col md:flex-row flex-wrap gap-4 items-center justify-between mb-6 p-4 rounded-xl shadow-sm bg-[#e6f0f4] border border-gray-200">
   <!-- Contenedor de filtros -->
   <div class="flex flex-col md:flex-row flex-wrap gap-4 items-center flex-1">
     <!-- Buscar por código -->
@@ -11,7 +11,7 @@
         (input)="emitirBusquedaCodigo($event)"
         type="text"
         placeholder="Buscar por"
-        class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg shadow-sm bg-[#98D2C0] focus:outline-none focus:ring-2 focus:ring-[#b39ddb] text-gray-800"
+        class="w-full pl-10 pr-4 py-2 border border-gray-200 rounded-lg shadow-sm bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 text-gray-800"
       />
     </div>
 
@@ -23,7 +23,7 @@
       <select
         [value]="filtroCargo"
         (change)="emitirFiltroCargo($event)"
-        class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg shadow-sm bg-[#98D2C0] focus:outline-none focus:ring-2 focus:ring-[#b39ddb] text-gray-800"
+        class="w-full pl-10 pr-4 py-2 border border-gray-200 rounded-lg shadow-sm bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 text-gray-800"
       >
         <option value="">Buscar Por</option>
         <option *ngFor="let estados of estados" [value]="estados">
@@ -32,14 +32,13 @@
       </select>
     </div>
 
-
     <!-- Botón reiniciar -->
     <button
       *ngIf="busquedaCodigo || busquedaNombre || filtroCargo"
       (click)="reiniciarFiltros()"
-      class="w-full md:w-auto px-4 py-2 bg-indigo-500 text-white rounded-lg hover:bg-indigo-600 transition duration-200 shadow-md flex items-center gap-2"
+      class="w-full md:w-auto px-4 py-2 bg-white text-gray-700 rounded-lg hover:bg-gray-300 transition duration-200 shadow-md flex items-center gap-2 border border-gray-200"
     >
-      <span class="material-symbols-rounded">restart_alt</span>
+      <span class="material-symbols-rounded text-gray-600">restart_alt</span>
       Reiniciar
     </button>
   </div>
@@ -47,9 +46,9 @@
   <!-- Botón Crear Usuario -->
   <button
     (click)="onCrearUsuario()"
-    class="w-full md:w-auto px-4 py-2 bg-indigo-500 text-white rounded-lg hover:bg-indigo-600 transition duration-200 shadow-md flex items-center gap-2"
+    class="w-full md:w-auto px-4 py-2 bg-white text-gray-700 rounded-lg hover:bg-gray-300 transition duration-200 shadow-md flex items-center gap-2 border border-gray-200"
   >
-    <span class="material-symbols-rounded">add</span>
+    <span class="material-symbols-rounded text-gray-600">add</span>
     Crear Usuario
   </button>
 </div>
