--- a/src/app/shared/modals/tabla-usuarios/tabla-usuarios.component.html
+++ b/src/app/shared/modals/tabla-usuarios/tabla-usuarios.component.html
@@ -1,4 +1,4 @@
-<div class="bg-[#98D2C0] rounded-lg shadow overflow-hidden">
+<div class="bg-white rounded-lg shadow overflow-hidden border border-gray-200">
 
   <!-- Tabla -->
   <table
@@ -6,19 +6,19 @@
     class="w-full table-auto"
   >
     <thead>
-      <tr class="bg-[#4F959D] text-white">
-        <th class="px-6 py-3">Código</th>
-        <th class="px-6 py-3">Nombre y Apellidos</th>
-        <th class="px-6 py-3">DNI</th>
-        <th class="px-6 py-3">Correo Electrónico</th>
-        <th class="px-6 py-3">Cargo</th>
-        <th class="px-6 py-3 text-center">Acciones</th>
+      <tr class="bg-[#e6f0f4] text-gray-800">
+        <th class="px-6 py-3 text-left font-medium">Código</th>
+        <th class="px-6 py-3 text-left font-medium">Nombre y Apellidos</th>
+        <th class="px-6 py-3 text-left font-medium">DNI</th>
+        <th class="px-6 py-3 text-left font-medium">Correo Electrónico</th>
+        <th class="px-6 py-3 text-left font-medium">Cargo</th>
+        <th class="px-6 py-3 text-center font-medium">Acciones</th>
       </tr>
     </thead>
     <tbody>
       <tr
         *ngFor="let usuario of paginaActual"
-        class="border-t border-[#4F959D] hover:bg-[#8ac7b3] transition duration-150"
+        class="border-t border-gray-200 hover:bg-gray-100 transition duration-150"
       >
         <td class="px-6 py-4 font-mono text-sm text-gray-800">
         {{ usuario.codigo }}
@@ -62,17 +62,17 @@
   </div>
 
   <!-- Paginación -->
-  <div class="flex justify-between items-center p-4 bg-[#4F959D]" *ngIf="totalPaginas > 1">
+  <div class="flex justify-between items-center p-4 bg-[#e6f0f4]" *ngIf="totalPaginas > 1">
     <button
-      class="px-3 py-1 bg-[#98D2C0] rounded hover:bg-[#8ac7b3] text-gray-800"
+      class="px-3 py-1 bg-white rounded hover:bg-gray-300 text-gray-800 border border-gray-200"
       (click)="paginaAnterior()"
       [disabled]="pagina === 1"
     >
       Anterior
     </button>
-    <p class="text-white">Página {{ pagina }} de {{ totalPaginas }}</p>
+    <p class="text-gray-800">Página {{ pagina }} de {{ totalPaginas }}</p>
     <button
-      class="px-3 py-1 bg-[#98D2C0] rounded hover:bg-[#8ac7b3] text-gray-800"
+      class="px-3 py-1 bg-white rounded hover:bg-gray-300 text-gray-800 border border-gray-200"
       (click)="paginaSiguiente()"
       [disabled]="pagina === totalPaginas"
     >
@@ -80,5 +80,3 @@
     </button>
   </div>
 </div>
-
-
