--- a/src/app/views/features/view-admin/view-admin.component.html
+++ b/src/app/views/features/view-admin/view-admin.component.html
@@ -62,13 +62,7 @@
             Ver
           </button>
         </div>
-        
       </div>
-
-
-
-
-
 
       <div
         class="relative bg-white rounded-xl border border-gray-200 p-6 shadow-sm mt-8"
@@ -76,7 +70,7 @@
         <span
           class="absolute top-0 left-0 mt-4 ml-4 text-lg font-semibold text-gray-800"
         >
-          Gestión de Comprobantes
+          Gestión de Usuarios
         </span>
 
         <div
@@ -87,7 +81,7 @@
               receipt_long
             </span>
             <span class="text-base font-medium text-gray-800">
-              Visualizar Usuarios
+              Registro de Usuarios
             </span>
           </div>
           <button
@@ -98,7 +92,6 @@
             Ver
           </button>
         </div>
-        
       </div>
     </div>
 
@@ -132,48 +125,53 @@
       <div
         class="rounded-xl border border-gray-200 p-6 space-y-4 bg-white shadow-sm"
       >
-
-  <!-- Nombre Completo -->
-  <div>
-    <label class="text-sm text-gray-500">Nombre Completo</label>
-    <input
-      type="text"
-      [value]="userData?.nombreEmpleado + ' ' + userData?.apellPaternEmpleado + ' ' + userData?.apellMaternEmpleado"
-      readonly
-      class="w-full mt-1 p-2 border border-gray-300 rounded-lg bg-gray-50 text-sm text-gray-700"
-    />
-  </div>
-
-  <!-- Teléfono -->
-  <div>
-    <label class="text-sm text-gray-500">Teléfono</label>
-    <input
-      type="tel"
-      [value]="userData?.telefono"
-      readonly
-      class="w-full mt-1 p-2 border border-gray-300 rounded-lg bg-gray-50 text-sm text-gray-700"
-    />
-  </div>
-
-  <!-- Rol -->
-  <div>
-    <label class="text-sm text-gray-500">Rol</label>
-    <input
-      type="text"
-      [value]="userData?.nombreRol"
-      readonly
-      class="w-full mt-1 p-2 border border-gray-300 rounded-lg bg-gray-50 text-sm text-gray-700"
-    />
-  </div>
+        <!-- Nombre Completo -->
         <div>
-    <label class="text-sm text-gray-500">Correo Electrónico</label>
-    <input
-      type="email"
-      [value]="userData?.email"
-      readonly
-      class="w-full mt-1 p-2 border border-gray-300 rounded-lg bg-gray-50 text-sm text-gray-700"
-    />
-  </div>
+          <label class="text-sm text-gray-500">Nombre Completo</label>
+          <input
+            type="text"
+            [value]="
+              userData?.nombreEmpleado +
+              ' ' +
+              userData?.apellPaternEmpleado +
+              ' ' +
+              userData?.apellMaternEmpleado
+            "
+            readonly
+            class="w-full mt-1 p-2 border border-gray-300 rounded-lg bg-gray-50 text-sm text-gray-700"
+          />
+        </div>
+
+        <!-- Teléfono -->
+        <div>
+          <label class="text-sm text-gray-500">Teléfono</label>
+          <input
+            type="tel"
+            [value]="userData?.telefono"
+            readonly
+            class="w-full mt-1 p-2 border border-gray-300 rounded-lg bg-gray-50 text-sm text-gray-700"
+          />
+        </div>
+
+        <!-- Rol -->
+        <div>
+          <label class="text-sm text-gray-500">Rol</label>
+          <input
+            type="text"
+            [value]="userData?.nombreRol"
+            readonly
+            class="w-full mt-1 p-2 border border-gray-300 rounded-lg bg-gray-50 text-sm text-gray-700"
+          />
+        </div>
+        <div>
+          <label class="text-sm text-gray-500">Correo Electrónico</label>
+          <input
+            type="email"
+            [value]="userData?.email"
+            readonly
+            class="w-full mt-1 p-2 border border-gray-300 rounded-lg bg-gray-50 text-sm text-gray-700"
+          />
+        </div>
       </div>
     </div>
   </div>
